<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskAccountProgress Pro</string>
    <string name="hello_world">Hello world!</string>
    <string name="description">For experiment! Do not worry</string>

    <string name="button_dialog_cancel">Cancel</string>
    <string name="button_dialog_ok">Ok</string>

    <string name="dialog_titel_commit_complete">Record your results</string>

    <string name="proba_big">Эти системные элементы управления (например, нижняя панель навигации и панель с кнопками "Назад", "Домой", "Последние приложения") обычно находятся вне контроля приложения и зависят от операционной системы Android и её настроек.

Вы можете изменить цвет и стиль вашего собственного приложения, включая верхний Toolbar и другие пользовательские элементы интерфейса, но изменение внешнего вида системных элементов </string>

    <string name="bt_main_menu">Menu</string>
    <string name="bt_tracker">Tracker</string>
    <string name="bt_notePad">Notes</string>
    <string name="bt_settings">Settings</string>
    <string name="bt_navigete_progress">Progress</string>


    <string-array name="level_attention">
        <item>Very low</item>
        <item>Low</item>
        <item>Average</item>
        <item>High</item>
        <item>Very High</item>
    </string-array>

</resources>
