<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:padding="5dp"
    android:background="@drawable/shape_view_in_dialog">

    <Button
        android:id="@+id/bt_navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@drawable/selector_button_navigate"
        android:text = "@string/bt_main_menu"
        android:textSize="14sp"/>
    <Button
        android:id="@+id/bt_navigation_tracker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@drawable/selector_button_navigate"
        android:text = "@string/bt_tracker"
        android:textSize="12sp"/>
    <Button
        android:id="@+id/bt_navigation_notePad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@drawable/selector_button_navigate"
        android:text = "@string/bt_notePad"
        android:textSize="12sp"/>
    <Button
        android:id="@+id/bt_navigation_achievements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@drawable/selector_button_navigate"
        android:text = "@string/bt_navigete_progress"
        android:textSize="12sp"/>
    <Button
        android:id="@+id/bt_navigation_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@drawable/selector_button_navigate"
        android:text = "@string/bt_settings"
        android:textSize="12sp"/>

</LinearLayout>